<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sighe.workouttracker.activity.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:id="@+id/mode_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnWalking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/mode_button_selector"
            android:padding="3dp"
            android:srcCompat="@drawable/ic_directions_walk_black_48px" />

        <ImageButton
            android:id="@+id/btnRunning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/mode_button_selector"
            android:padding="3dp"
            android:srcCompat="@drawable/ic_directions_run_black_48px" />

        <ImageButton
            android:id="@+id/btnBiking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/mode_button_selector"
            android:padding="3dp"
            android:srcCompat="@drawable/ic_directions_bike_black_48px" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mode_layout"
        android:background="@color/colorBackgroundLight"
        android:columnCount="2">

        <TextView
            android:id="@+id/tvStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:padding="3dp"
            android:text="@string/start_time" />

        <TextView
            android:id="@+id/tvEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:padding="3dp"
            android:text="@string/end_time" />

        <TextView
            android:id="@+id/tvElapseTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_margin="5dp"
            android:ems="10"
            android:padding="3dp"
            android:text="@string/elapsed_time" />

        <TextView
            android:id="@+id/tvStepTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:padding="3dp"
            android:text="@string/step_total" />

        <TextView
            android:id="@+id/tvDistanceTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:padding="3dp"
            android:text="@string/total_distance" />

        <TextView
            android:id="@+id/tvAverageSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:padding="3dp"
            android:text="@string/avg_speed" />

        <TextView
            android:id="@+id/tvAverageStepsPerMinute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:padding="3dp"
            android:text="@string/avg_steps_min" />

        <TextView
            android:id="@+id/tvCurrentSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:padding="3dp"
            android:text="@string/cur_speed" />

        <TextView
            android:id="@+id/tvCurrentStepsPerMinute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:padding="3dp"
            android:text="@string/steps_min" />


    </GridLayout>

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gridLayout"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_start" />

        <Button
            android:id="@+id/btnPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_pause" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_reset" />

        <Button
            android:id="@+id/btnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_stop" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvStatus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:text="Save" />

</RelativeLayout>
