<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dp"
    android:background="@color/colorBackgroundLight"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvLat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingEnd="3dp"
            android:paddingStart="3dp"
            android:text="@string/locLat"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvLong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingEnd="3dp"
            android:paddingStart="3dp"
            android:text="@string/locLong"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingEnd="3dp"
            android:paddingStart="3dp"
            android:text="@string/incr_dist"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvElapseTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingEnd="3dp"
            android:paddingStart="3dp"
            android:text="@string/incr_time"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvSteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingEnd="3dp"
            android:paddingStart="3dp"
            android:text="@string/incr_steps"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>