<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:text="@string/goal_mode_label"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="10sp" />

    <Spinner
        android:id="@+id/spSetGoalModeType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_margin"
        android:background="@color/colorBackgroundLight"
        android:textAppearance="?attr/textAppearanceListItem">

        <requestFocus />
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:text="@string/goal_value_type_label"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="10sp" />

    <Spinner
        android:id="@+id/spSetGoalValueType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_margin"
        android:background="@color/colorBackgroundLight"
        android:textAppearance="?attr/textAppearanceListItem" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:text="@string/goal_intervals_label"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="10sp" />

    <Spinner
        android:id="@+id/spSetGoalInterval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_margin"
        android:background="@color/colorBackgroundLight"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:text="@string/goal_intervals_label"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="10sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etSetGoalValue"
            android:layout_width="@dimen/item_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:gravity="left"
            android:inputType="numberDecimal"
            android:textAppearance="?attr/textAppearanceListItem" />


        <TextView
            android:id="@+id/tvSetGoalValueUOM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:text="mi"
            android:textAppearance="?attr/textAppearanceListItem" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:text="Cancel" />


        <Button
            android:id="@+id/btnSaveGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:text="Save" />
    </LinearLayout>
</LinearLayout>